// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSerializer : getAllUsers : should return array with info 1`] = `
{
  "data": [
    {
      "attributes": {
        "ava": null,
        "email": "111s@11.1",
        "firstName": "assaaa",
        "lastName": "bbsbb",
        "login": "dsdsd",
        "status": "1s",
      },
      "id": "3",
      "links": {
        "self": "http://localhost:5000/api/user/3",
      },
      "type": "User",
    },
    {
      "attributes": {
        "ava": null,
        "email": "111@11.1",
        "firstName": "aaaa",
        "lastName": "bbbb",
        "login": "Artem",
        "status": "1",
      },
      "id": "1",
      "links": {
        "self": "http://localhost:5000/api/user/1",
      },
      "type": "User",
    },
  ],
  "links": {
    "self": "http://localhost:5000/api/example",
  },
  "meta": {
    "countOfUsers": 2,
  },
}
`;

exports[`UserSerializer : getOne : should return info about user 1`] = `
{
  "data": {
    "attributes": {
      "ava": null,
      "email": "111@11.1",
      "firstName": "aaaa",
      "lastName": "bbbb",
      "login": "Artem",
      "status": "1",
    },
    "id": "1",
    "links": {
      "self": "http://localhost:5000/api/user/1",
    },
    "type": "User",
  },
}
`;
